syntax = "proto3";

import "internal/opt/optimize.proto";

package distr.ho;

message PutOptimizeRequest {
    opt.Optimization opts = 1;
}

message PutOptimizeResponse {}

service DistrOptimization {
    rpc PutOptimize (PutOptimizeRequest) returns (PutOptimizeResponse);
}
